Fixed spacing issue and attempt to fix differences between desktop and mobile views

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
   text-align: center;
   margin-top: 3.2rem;
   color: #444;
-  font-size: 4.4rem;
+  font-size: 3.8rem;
   padding: 0 4.8rem;
   /* text-shadow: 2px 2px #aeb4ba; */
   text-shadow: 0 1.7px #fff;
@@ -86,7 +86,7 @@ i {
   /* grid-template-columns: repeat(auto-fit, minmax(1rem, 1fr)); */
   /* grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr)); */
   grid-auto-flow: column;
-  margin-bottom: 4.8rem;
+  margin-bottom: 3.6rem;
 }
 
 .child,
@@ -177,7 +177,7 @@ i {
   align-items: center;
   justify-content: center;
   gap: 2.4rem;
-  margin-bottom: 4.8rem;
+  margin-bottom: 6.2rem;
   padding: 3.2rem;
   background-color: #dae1e8;
   border-radius: 0.6rem;
@@ -212,6 +212,10 @@ i {
   color: #333;
 }
 
+.fiber-select {
+  margin-bottom: 0.2rem;
+}
+
 .reset-btn {
   margin-top: 2.6rem;
   color: #333;
@@ -232,7 +236,7 @@ label {
 
 .forms {
   margin: 0 auto;
-  justify-content: center;
+  /* justify-content: center; */
   width: 80rem;
 }
 
@@ -257,7 +261,7 @@ label {
 footer {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
   padding: 1.6rem;
   border-top: 1px solid #c4cbd1;
   font-size: 1.2rem;
